<resources>
    <string name="app_name">Lesson_3</string>
    <string name="button_top_text">Верстка построена без ConstraintLayout</string>
    <string name="button_bottom_text">Верстка построена на ConstraintLayout</string>
    <string name="toolbar_text">Личный профиль</string>
    <string name="textView_title">Личные данные</string>
    <string name="textView_name">Имя</string>
    <string name="textView_surname">Фамилия</string>
    <string name="textView_email">E-mail</string>
    <string name="textView_login">Логин</string>
    <string name="textView_region">Ваш регион</string>
    <string name="button_logout">Выйти из аккаунта</string>
    <string name="card_text">Карта №%1$s\nСпециалист</string>
    <string name="textView_numberCard">Карта №%1$s</string>
    <string name="textView_specialty">Специальность</string>
    <string name="item_edit_text">Редактировать</string>

    <string name="name_default">Анастасия</string>
    <string name="surname_default">Антонина</string>
    <string name="email_default">anykee.box@gmail.ru</string>
    <string name="login_default">HIE023UOI88</string>
    <string name="region_default">Санкт-Петербург</string>
    <string name="number_of_card_default">7898769</string>

    <string name="edit_text">Редактировать</string>
    <string name="logout_text">Выход из аккаунта</string>

    <string name="desc_appbar_imageView">Иконка</string>
</resources>