<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/main.appbar"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        >

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/main.collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="6dp"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:titleEnabled="false">

            <include
                android:id="@+id/textViewToolbar"
                layout="@layout/card_layout"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_margin="12dp"
                android:text="@string/card_text"
                app:layout_collapseMode="parallax" />

            <include
                android:id="@+id/main.toolbar"
                layout="@layout/toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_anchor="@id/main.appbar"
                app:layout_anchorGravity="top"
                app:layout_collapseMode="pin"
                app:title="@string/toolbar_text" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/HeadingStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="12dp"
                android:text="@string/textView_title"
                android:textColor="@color/colorPrimary" />

            <TextView
                style="@style/HeadingStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="12dp"
                android:text="@string/textView_name" />

            <TextView
                android:id="@+id/textViewName"
                style="@style/DataTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="12dp"
                android:text="@string/textView_name" />

            <TextView
                style="@style/HeadingStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="12dp"
                android:text="@string/textView_surname" />

            <TextView
                android:id="@+id/textViewSurname"
                style="@style/DataTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="12dp"
                android:text="@string/textView_surname" />

            <TextView
                style="@style/HeadingStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="12dp"
                android:text="@string/textView_email" />

            <TextView
                android:id="@+id/textViewEmail"
                style="@style/DataTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="12dp"
                android:text="@string/textView_email" />

            <TextView
                style="@style/HeadingStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="12dp"
                android:text="@string/textView_login" />

            <TextView
                android:id="@+id/textViewLogin"
                style="@style/DataTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="12dp"
                android:text="@string/textView_login" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="12dp">

                <TextView
                    android:id="@+id/textViewRegionHeader"
                    style="@style/HeadingStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:text="@string/textView_region" />

                <TextView
                    android:id="@+id/textViewRegion"
                    style="@style/DataTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textViewRegionHeader"
                    android:layout_marginTop="6dp"
                    android:text="@string/textView_region" />

                <ImageButton
                    android:id="@+id/buttonEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="?attr/selectableItemBackground"
                    android:padding="6dp"
                    android:src="@drawable/ic_edit" />
            </RelativeLayout>

            <TextView
                android:id="@+id/buttonLogout"
                style="@style/DataTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="12dp"
                android:background="?attr/selectableItemBackground"
                android:drawablePadding="32dp"
                android:gravity="center_vertical"
                android:text="@string/button_logout"
                app:drawableStartCompat="@android:drawable/ic_menu_set_as" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>