<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/main.appbar"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/main.collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            android:padding="6dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/card_text"
                android:layout_gravity="center_horizontal|bottom"
                android:background="@color/cardview_light_background"
                android:drawableLeft="@drawable/img_avatar"
                android:drawablePadding="18dp"
                android:layout_margin="6dp"
                android:textColor="@color/colorTextDefault"
                android:gravity="center_vertical"
                android:textSize="16dp"
                android:padding="12dp"
                app:layout_collapseMode="parallax"/>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/main.toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                style="@style/ToolBarWithNavigationBack"
                app:layout_anchor="@id/main.appbar"
                app:layout_anchorGravity="top"
                android:background="@color/colorPrimary">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="?attr/actionBarSize">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/toolbar_text"
                        android:textSize="16dp"
                        android:textColor="@color/colorTextDefault"
                        android:layout_centerVertical="true"
                        />

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_edit"
                        android:layout_alignParentEnd="true"
                        android:background="@color/colorPrimary"
                        android:layout_marginEnd="6dp"/>
                </RelativeLayout>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textView_title"
                android:textColor="@color/colorPrimary"
                android:layout_marginStart="6dp"
                android:layout_marginTop="12dp"
                android:textSize="16dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textView_name"
                android:textColor="@color/cardview_shadow_start_color"
                android:layout_marginStart="6dp"
                android:layout_marginTop="24dp"
                android:textSize="16dp"
                />

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textView_name"
                android:textColor="@color/colorTextDefault"
                android:layout_marginStart="6dp"
                android:textSize="16dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textView_surname"
                android:textColor="@color/cardview_shadow_start_color"
                android:layout_marginStart="6dp"
                android:layout_marginTop="24dp"
                android:textSize="16dp"
                />

            <TextView
                android:id="@+id/textViewSurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textView_surname"
                android:textColor="@color/colorTextDefault"
                android:layout_marginStart="6dp"
                android:textSize="16dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textView_email"
                android:textColor="@color/cardview_shadow_start_color"
                android:layout_marginStart="6dp"
                android:layout_marginTop="24dp"
                android:textSize="16dp"
                />

            <TextView
                android:id="@+id/textViewEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textView_email"
                android:textColor="@color/colorTextDefault"
                android:layout_marginStart="6dp"
                android:textSize="16dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textView_login"
                android:textColor="@color/cardview_shadow_start_color"
                android:layout_marginStart="6dp"
                android:layout_marginTop="24dp"
                android:textSize="16dp"
                />

            <TextView
                android:id="@+id/textViewLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textView_login"
                android:textColor="@color/colorTextDefault"
                android:layout_marginStart="6dp"
                android:textSize="16dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textView_region"
                android:textColor="@color/cardview_shadow_start_color"
                android:layout_marginStart="6dp"
                android:layout_marginTop="24dp"
                android:textSize="16dp"
                />

            <TextView
                android:id="@+id/textViewRegion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textView_region"
                android:textColor="@color/colorTextDefault"
                android:layout_marginStart="6dp"
                android:drawableEnd="@drawable/ic_edit"
                android:layout_marginEnd="6dp"
                android:textSize="16dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttonLogout"
                android:text="@string/button_logout"
                android:textColor="@color/colorTextDefault"
                android:layout_marginStart="6dp"
                android:gravity="center_vertical"
                android:drawablePadding="32dp"
                android:layout_marginTop="24dp"
                app:drawableStartCompat="@android:drawable/ic_menu_set_as" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>